feat: Make project compatible with Java 21
This commit updates the project to build and run on Java 21.

The following changes were made:
- Upgraded Gradle wrapper to version 8.5.
- Set Java source and target compatibility to 21.
- Migrated from the `maven` plugin to the `maven-publish` plugin.
- Updated Groovy to 4.0.12 and Spock to 2.3-groovy-4.0.
- Updated the `forbidden-apis` plugin to 3.10 and its signatures to Java 21.
- Replaced deprecated API usage in the source code, including `URL`, `Locale`, and `Toolkit.getMenuShortcutKeyMask`.
- Removed tests that relied on the deprecated `SecurityManager`.